tests/errors/preprocessor/031_include.c.expect
./tests/errors/preprocessor/031_include.c:1:9: error: #include directive expects "filepath" or <filepath>
1 | #include 
            ^
